--- a/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop.csproj
@@ -23,6 +23,8 @@
     <Compile Remove="Migrations\20201230180032_Initial.Designer.cs" />
     <Compile Remove="Migrations\20201230180350_DbSet.cs" />
     <Compile Remove="Migrations\20201230180350_DbSet.Designer.cs" />
+    <Compile Remove="Migrations\20201230183953_Initial.cs" />
+    <Compile Remove="Migrations\20201230183953_Initial.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +36,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
